SCIFIO: clean up code
Applied Source -> Clean Up.. in Eclipse to the SCIFIO component.